<resources>
    <string name="app_name">BankRegistraionApp</string>
    <string name="pan_number">PAN NUMBER</string>
    <string name="birth_date">BIRTH DATE</string>
    <string name="i_dont_have_pan">I don\'t have PAN</string>
    <string name="providing_pan_and_date">Providing PAN and Date of Birth helps us find and fetch your KYC from a central registry by the Government of India <font fgcolor='#010953'>Learn More</font></string>
    <string name="first_of_the_few">First of the few steps to set you up with a Bank Account</string>


</resources>